exports[`<App /> for mobile mode should match snapshot 1`] = `
<div>
  <Sidebar
    docked={false}
    dragToggleDistance={30}
    onSetOpen={[Function]}
    open={false}
    pullRight={false}
    shadow={true}
    sidebar={
      <Menu
        closeAction={[Function]}
        showCloseButton={true} />
    }
    styles={
      Object {
        "sidebar": Object {
          "backgroundColor": "darkPrimary",
        },
      }
    }
    touch={true}
    touchHandleWidth={20}
    transitions={true}>
    <Connect(HeadingComponent)
      menuAction={[Function]}
      showMenuButton={true} />
    <p>
      Hello World
    </p>
    <DevTools />
  </Sidebar>
</div>
`;

exports[`a 1`] = `
<div>
  <Sidebar
    docked={true}
    dragToggleDistance={30}
    onSetOpen={[Function]}
    open={false}
    pullRight={false}
    shadow={true}
    sidebar={
      <Menu
        closeAction={[Function]}
        showCloseButton={false} />
    }
    styles={
      Object {
        "sidebar": Object {
          "backgroundColor": "darkPrimary",
        },
      }
    }
    touch={true}
    touchHandleWidth={20}
    transitions={true}>
    <Connect(HeadingComponent)
      menuAction={[Function]}
      showMenuButton={false} />
    <p>
      Hello World
    </p>
    <DevTools />
  </Sidebar>
</div>
`;
